--- a/portal/static/css/gil.css
+++ b/portal/static/css/gil.css
@@ -6809,7 +6809,10 @@ figure.nav-overlay {
     top: 210px;
     background-color: rgba(95, 103, 110, 1);
 }
-.home--item-container, .home--item-container-full, .home--registration-container {
+.home--item-container, 
+.home--item-container-full,
+.home--registration-container,
+.link-box {
     background: inherit;
     background-color: #43484d;
     box-sizing: border-box;
@@ -6869,7 +6872,6 @@ figure.nav-overlay {
     margin-top: 25em;
     overflow: hidden;
 }
-
 .home--registraion-wrapper {
     margin-top: 1.3em;
 }
@@ -6883,17 +6885,45 @@ figure.nav-overlay {
     line-height: 26px;
     padding: 20px;
 }
+.home--items-wrapper .link-container {
+    margin: 0 1em 2em 1.1em;
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+}
+.home--items-wrapper .link-box {
+    padding: 1em;
+    height: 5em;
+    min-height: 4em;
+    max-width: 100%;
+    margin: 0.5em 0.2em;
+    text-align: center;
+    color: #BCC2A6;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    background-color: rgba(57, 56, 51, 0.8);
+    cursor: pointer;
+}
+.home--items-wrapper .link-box a {
+    color: #BCC2A6;
+}
+.home--items-wrapper .link-box a:hover {
+    color: #FFF;
+}
 .home--registration-container p {
     font-size: 1.2em;
     padding: 1em 0;
 }
-
-nav.side-nav::-webkit-scrollbar, div.home--item-container::-webkit-scrollbar, div.modal.fade::-webkit-scrollbar {
+nav.side-nav::-webkit-scrollbar, 
+div.home--item-container::-webkit-scrollbar, 
+div.modal.fade::-webkit-scrollbar {
     width: 0px;  /* remove scrollbar space */
     background: transparent;  /* optional: just make scrollbar invisible */
 }
 /* optional: show position indicator in red */
-nav.side-nav::-webkit-scrollbar-thumb, div.home--item-container::-webkit-scrollbar-thumb, div.modal.fade::-webkit-scrollbar-thumb {
+nav.side-nav::-webkit-scrollbar-thumb, 
+div.home--item-container::-webkit-scrollbar-thumb, 
+div.modal.fade::-webkit-scrollbar-thumb {
     background: #FF0000;
 }
 .home--item-text {
@@ -6909,10 +6939,6 @@ a.home--modal-link {
     display: none;
 }
 .home--item-text * {
-    /*overflow:hidden;
-    text-overflow-multiline:ellipsis;
-    white-space: nowrap;
-    text-overflow: ellipsis;*/
     font-size: 0.97em;
 }
 #portalScrollArrow {
@@ -6971,7 +6997,6 @@ a.home--modal-link {
 #consentContainer {
     visibility: invisible;
 }
-
 .box-modal div.or {
     background: #adb1ad;
     border-radius: 12px;
@@ -7047,7 +7072,9 @@ a.home--modal-link {
     }
 }
 @media (max-width: 1199px) {
-    .home--item-container, .home--registration-container, .home--item-container-full {
+    .home--item-container, 
+    .home--registration-container, 
+    .home--item-container-full {
         width: 95%;
         max-width: 100%;
         margin: 1em 1.5em 1em 1.6em;
@@ -7057,7 +7084,9 @@ a.home--modal-link {
     }
 }
 @media (max-width: 990px) {
-    .home--item-container, .home--registration-container, .home--item-container-full  {
+    .home--item-container, 
+    .home--registration-container,
+    .home--item-container-full  {
         width: 90%;
         max-width: 100%;
         margin: 1em 2.5em 1em 2.6em;
@@ -7084,14 +7113,19 @@ a.home--modal-link {
     }
 }
 @media (max-width: 750px) {
-    .home--item-container, .home--registration-container, .home--item-container-full  {
+    .home--item-container, 
+    .home--registration-container, 
+    .home--item-container-full  {
         max-width: 100%;
         margin: 5%;
     }
-    #modal-org, #modal-org h4 {
+    #modal-org, 
+    #modal-org h4 {
         font-size: 14px !important;
     }
-    #fillOrgs *, .noOrg-container label span, #submit-orgs {
+    #fillOrgs *, 
+    .noOrg-container label span, 
+    #submit-orgs {
         font-size: 12px !important;
     }
     .noOrg-container input {
@@ -7125,12 +7159,27 @@ a.home--modal-link {
         font-size: 1em !important;
         line-height: 1.2em;
     }
-    .home--item-container, .home--item-container h4, .home--item-text * {
+    .home--item-container,
+    .home--item-container h4,
+    .home--item-text * {
         font-size: 1em !important;
         padding: 0.5em;
     }
-    #modal-register p, #modal-register .button {
+    #modal-register p, 
+    #modal-register .button {
         font-size: 14px;
+    }
+    .home--items-wrapper {
+        top: 190px;
+    }
+    .home--items-wrapper .link-box {
+        width: 100%;
+        max-width: 100%;
+        margin-right: 3em;
+        margin-left: 0.7em;
+    }
+    .home--items-wrapper .link-box h4{
+        font-size: 0.9em;
     }
 }
 @media (max-width: 550px) {
