--- a/portal/templates/gil/portal.html
+++ b/portal/templates/gil/portal.html
@@ -6,8 +6,13 @@
     <section class="page-intro page-intro--dark home--header">
         <h3 class="page-intro__main">Welcome to your TrueNTH Dashboard{% if user.first_name %}, {{user.first_name}}{% endif %}</h3>
         <br/>
-        <p class="page-intro__sub">Below are the TrueNTH tools available to you.</p>
-        <p class="page-intro__sub">More will become available as TrueNTH evolves.</p>
+        {% if user.has_role(ROLE.PARTNER) %}
+            <p class="page-intro__sub">More tools for you will be available as TrueNTH develops.</p>
+            <p class="page-intro__sub">For now, learn more about TrueNTH:</p>
+        {% else %}
+            <p class="page-intro__sub">Below are the TrueNTH tools available to you.</p>
+            <p class="page-intro__sub">More will become available as TrueNTH evolves.</p>
+        {% endif %}
         <div class="button-callout">
             <figure id="portalScrollArrow"></figure>
         </div>
@@ -15,6 +20,19 @@
 
     {# present each intervention in turn if configured for user #}
      <section class="icon-box-group__wrapper home--items-wrapper">
+        {% if user.has_role(ROLE.PARTNER) %}
+            <div class="icon-box-group link-container">
+                <div class="link-box">
+                  <h4><a href="{{PORTAL}}/about">About TrueNTH</a></h4>
+                </div>
+                <div class="link-box">
+                  <h4><a href="{{PORTAL}}/what-is-prostate-cancer">About Prostate Cancer</a></h4>
+                </div>
+                <div class="link-box">
+                  <h4><a href="{{PORTAL}}/lived-experience">Lived Experience</a></h4>
+                </div>
+            </div>
+        {% endif %}
         <div id="homeItemsParentContainer" class="icon-box-group">
         {% for intervention in interventions %}
             {% set display = intervention.display_for_user(user) %}
@@ -83,7 +101,7 @@
                         }, 1000);
                     };
                 });
-            } else $("#portalScrollArrow").hide();
+            };
             if (hc.length == 1) {
                 hc.removeClass("home--item-container").addClass("home--item-container-full");
             };
