redesign login page

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -49,7 +49,8 @@ body {
 #fullSizeBox span.separator {
   display: none;
 }
-#socialMediaRegistrationContainer {
+#socialMediaRegistrationContainer,
+#socialMediaLoginContainer {
   display: none;
 }
 #emailInfoText {
@@ -118,8 +119,8 @@ body {
   -webkit-transform: translate(0, 0);
   transform: translate(0, 0);
 }
-#stickyMenu::-webkit-scrollbar, 
-div.home--item-container::-webkit-scrollbar, 
+#stickyMenu::-webkit-scrollbar,
+div.home--item-container::-webkit-scrollbar,
 div.modal.fade::-webkit-scrollbar {
     width: 0px;  /* remove scrollbar space */
     background: transparent;  /* optional: just make scrollbar invisible */
@@ -136,7 +137,7 @@ a.back {
 a.open {
   top: 14em;
 }
-a.open:hover, 
+a.open:hover,
 a.back:hover {
   color: #356d43
 }
@@ -410,7 +411,7 @@ div.orglist-selector div.org-container label.org-label {
 #dataDownloadModal .profile-radio-list {
   margin-left:1em
 }
-#dataDownloadModal div.checkbox label, 
+#dataDownloadModal div.checkbox label,
 #dataDownloadModal label.radio-inline {
   font-size: 0.8em;
 }
@@ -858,7 +859,7 @@ div.noOrg-container span {
   width:350px;
   max-width: 100%;
 }
-#createProfileForm input[type="text"], 
+#createProfileForm input[type="text"],
 #createProfileForm select{
   height: 40px !important;
 }
@@ -1396,7 +1397,7 @@ div.org-container input[type="checkbox"] {
   border-bottom: 1px solid #E0E6E3;
   padding: 0.1em 0 1.5em 0;
 }
-.custom-container-item, 
+.custom-container-item,
 .custom-container-item-right {
   width: 33%;
   max-width: 100%;
@@ -1419,7 +1420,7 @@ div.org-container input[type="checkbox"] {
 .timezone-container {
   padding-bottom: 2em;
 }
-#profileForm #firstname, 
+#profileForm #firstname,
 #profileForm #lastname {
   width: 300px;
   max-width: 100%;
@@ -1570,7 +1571,7 @@ div.org-container input[type="checkbox"] {
     width: 100%;
     max-width: 100%;
   }
-  .download-wrapper, 
+  .download-wrapper,
   .download-break {
     display: none;
   }
@@ -1592,7 +1593,7 @@ div.org-container input[type="checkbox"] {
   #profileForm div.name-section {
     height: 10em;
   }
-  #profileForm #firstname, 
+  #profileForm #firstname,
   #profileForm #lastname {
     width: 100%;
     max-width: 100%;
@@ -1625,7 +1626,7 @@ div.org-container input[type="checkbox"] {
   div.orglist-selector div.dropdown-menu #userOrgs{
     width: 180px !important;
   }
-  div.orglist-selector div.org-container label.org-label, 
+  div.orglist-selector div.org-container label.org-label,
   #adminTableToolbar #orglist-footer-container label span {
     font-size: 0.8em;
   }
@@ -1646,7 +1647,7 @@ div.org-container input[type="checkbox"] {
   #userSessionsList {
     font-size: 0.9em;
   }
-  #adminTable .status-field, 
+  #adminTable .status-field,
   #adminTable .reports-field {
     display: none;
   }
@@ -1730,7 +1731,7 @@ div.org-container input[type="checkbox"] {
   .custom-container {
     display: block;
   }
-  .custom-container-item, 
+  .custom-container-item,
   .custom-container-item-right {
     font-size: 0.9em;
     width: 100%;
@@ -2194,8 +2195,10 @@ fieldset[disabled] .btn-google.active {
   max-width: 100%;
   margin: 0 auto;
 }
-#socialMediaRegistrationContainer .btn-social, 
-#regForm input[type="submit"]  {
+#socialMediaRegistrationContainer .btn-social,
+#regForm input[type="submit"],
+#socialMediaLoginContainer .btn-social,
+#loginForm input[type="submit"] {
     margin: 0.2em auto;
     display: inline-block;
     width: 400px;
@@ -2212,17 +2215,17 @@ fieldset[disabled] .btn-google.active {
     text-transform: uppercase;
     text-align: left;
 }
-
-#socialMediaRegistrationContainer .btn-social > :first-child {
+#socialMediaRegistrationContainer .btn-social > :first-child,
+#socialMediaLoginContainer .btn-social > :first-child {
   width: 40px;
   top: 0.4em;
 }
-
-#socialMediaRegistrationContainer .divider {
+#socialMediaRegistrationContainer .divider,
+#socialMediaLoginContainer .divider {
   height: 0.5em;
 }
-
-#regForm input {
+#regForm input,
+#loginForm input {
   background: #f1f0ef;
   height: 44px;
   padding: 5px;
@@ -2231,11 +2234,15 @@ fieldset[disabled] .btn-google.active {
   width: 400px;
   max-width: 100%;
 }
-
-#regForm input[type="submit"] {
+#regForm input[type="submit"],
+#loginForm input[type="submit"] {
    background-color: #79815d;
    text-align: center;
    padding: 1.2em 2em 1em 2em;
+   letter-spacing: 3px;
+}
+#loginForm input[type="submit"] {
+  height: 69px;
 }
 .reg-title {
   font-size: 1.4em;
@@ -2246,7 +2253,6 @@ fieldset[disabled] .btn-google.active {
   margin: 1.5em 0 25px;
   font-weight: bold;
 }
-
 div.or {
     display: none;
     background: #aeb4b9;
@@ -2271,13 +2277,18 @@ div.or {
     margin: -1.3em auto 20px auto;
     width: 100%;
 }
-
 @media (max-width: 640px) {
-  #regForm input, #socialMediaRegistrationContainer .btn-social, 
-  #regForm input[type="submit"] {
+  #regForm input,
+  #regForm input[type="submit"],
+  #loginForm input,
+  #loginForm input[type="submit"]
+  {
     font-size: 0.9em;
+    height: 52px;
   }
-  #socialMediaRegistrationContainer .btn-social {
-    padding-top: 2em;
+  #socialMediaRegistrationContainer .btn-social,
+  #socialMediaLoginContainer .btn-social
+  {
+    padding-top: 1.7em;
   }
 }
