--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -2092,7 +2092,10 @@ div.org-container input[type="checkbox"] {
   max-width: 100%;
   margin: 0 auto;
 }
-#socialMediaRegistrationContainer .btn-social, #regForm input[type="submit"]  {
+#socialMediaRegistrationContainer .btn-social,
+#regForm input[type="submit"],
+#socialMediaLoginContainer .btn-social,
+#socialMediaLoginContainer input[type="submit"]{
     margin: 0.2em auto;
     display: inline-block;
     width: 400px;
@@ -2110,16 +2113,22 @@ div.org-container input[type="checkbox"] {
     text-align: left;
 }
 
-#socialMediaRegistrationContainer .btn-social > :first-child {
+#socialMediaRegistrationContainer .btn-social > :first-child,
+#socialMediaLoginContainer .btn-social > :first-child 
+{
   width: 40px;
   top: 0.4em;
 }
 
-#socialMediaRegistrationContainer .divider {
+#socialMediaRegistrationContainer .divider,
+#socialMediaLoginContainer .divider
+{
   height: 0.5em;
 }
 
-#regForm input {
+#regForm input,
+#loginForm input
+{
   background: #f1f0ef;
   height: 44px;
   padding: 5px;
@@ -2129,7 +2138,8 @@ div.org-container input[type="checkbox"] {
   max-width: 100%;
 }
 
-#regForm input[type="submit"] {
+#regForm input[type="submit"],
+#loginForm input[type="submit"] {
    background-color: #7C959E;
    text-align: center;
    padding: 1.2em 2em 1em 2em;
@@ -2137,9 +2147,10 @@ div.org-container input[type="checkbox"] {
 .reg-title {
   font-size: 1.4em;
   line-height: 33px;
-  color: #4B5E6F;
+  color: #494a45;
   position: relative;
   padding: 0.6em 0 20px;
+  margin: 1.5em 0 25px;
   font-weight: bold;
 }
 
@@ -2164,11 +2175,21 @@ div.or {
     position: relative;
     margin: -1.3em auto 20px auto;
     width: 100%;
-}@media (max-width: 640px) {
-  #regForm input, #socialMediaRegistrationContainer .btn-social, #regForm input[type="submit"] {
+}
+@media (max-width: 640px) {
+  #regForm input, 
+  #socialMediaRegistrationContainer .btn-social, 
+  #regForm input[type="submit"],
+  #loginForm input, 
+  #socialMediaLoginContainer .btn-social,
+  #loginForm input[type="submit"]
+  {
     font-size: 0.9em;
+    height: 52px;
   }
-  #socialMediaRegistrationContainer .btn-social {
-    padding-top: 2em;
+  #socialMediaRegistrationContainer .btn-social,
+  #socialMediaLoginContainer .btn-social
+  {
+    padding-top: 1.7em;
   }
 }
