--- a/portal/templates/flask_user/login.html
+++ b/portal/templates/flask_user/login.html
@@ -2,68 +2,61 @@
 
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_checkbox_field, render_submit_field %}
-
-<style>
-    #tnthNavWrapper {
-        display: none;
-    }
-    #mainDiv {
-        background: none;
-    }
-    .watermark {
-        display: none;
-    }
-</style>
-
-<div id="fullSizeBox" class="box-min-500">
-    <img  src="{{ url_for('static', filename='img/spacer.jpg') }}" style="visibility: hidden" class="img-responsive hidden-xs"/>
-
-    <div id="fullSizeContainer">
-        <div class="text-center"><a href="/"><img id="fullSizeLogo" src="{{ url_for('static', filename='img/logo_wordmark.png') }}" alt="TrueNTH" /></a></div>
-        <div id="wellContainer">
-            <div class="tnth-well well">
-                <div class="tnth-well-close"><a href="/"><i class="fa fa-close text-muted"></i></a></div>
-                <div id="wellContent">
-                    <div class="btn-set">
-                        <a href="{{ url_for('auth.login', provider_name='facebook') }}"
-                           class="btn btn-social btn-facebook btn-block">
-                            <i class="fa fa-facebook"></i> Log in with Facebook
-                        </a>
-                        <a href="{{ url_for('auth.login', provider_name='google') }}"
-                           class="btn btn-social btn-google btn-block">
-                            <i class="fa fa-google"></i> Log in with Google
-                        </a>
-                    </div>
-                    <form action="" method="POST" class="form" role="form">
-                        {{ form.hidden_tag() }}
-
-                        {# Username or Email field #}
-                        {% set field = form.username if user_manager.enable_username else form.email %}
-                        {{ render_field(field, label="Email address", label_visible=false, tabindex=10, infoText="Note: If you had a username before, please use your email address now. Your password remains unchanged.") }}
-                        {# Password field #}
-                        {% set field = form.password %}
-                        {{ render_field(form.password, label="Password", label_visible=false, tabindex=20) }}
-                        {# Submit button #}
-                        {{ render_submit_field(form.submit, tabindex=180, label="Log In", btnSize="btn-lg") }}
-                    </form>
-
-                    {% if user_manager.enable_forgot_password %}
-                    <div style="margin-top: 1em">
-                        <a href="{{ url_for('user.forgot_password') }}">
-                            <small>{%trans%}Forgot your Password?{%endtrans%}</small></a>
-                    </div>
-                    {% endif %}
+<br/><br/><div class="divider"></div>
+<div id="loginForm" class="row">
+    <div class="col-md-push-2 col-md-8 col-xs-11">
+        <div class="btn-social-container">
+            <form action="" method="POST" class="form" role="form">
+                {{ form.hidden_tag() }}
+                {# Username or Email field #}
+                {% set field = form.username if user_manager.enable_username else form.email %}
+                {{ render_field(field, label="Email address", label_visible=false, tabindex=10, infoText="Note: If you had a username before, please use your email address now. Your password remains unchanged.") }}
+                {# Password field #}
+                {% set field = form.password %}
+                {{ render_field(form.password, label="Password", label_visible=false, tabindex=20) }}
+                {# Submit button #}
+                {{ render_submit_field(form.submit, tabindex=180, label="LOGIN", btnSize="btn-lg") }}
+            </form>
+            {% if user_manager.enable_forgot_password %}
+                <div class="divider">
+                    <a href="{{ url_for('user.forgot_password') }}"><small>{%trans%}Forgot your Password?{%endtrans%}</small></a>
+                </div>
+            {% endif %}
+            <br/>
+            <div class="divider"></div>
+            <div class="or">or</div>
+            <div class="or-divider"></div>
+            <br/>
+        </div>
+        <div id="socialMediaLoginContainer">
+            <div class="btn-social-container">
+                <div>
+                    <a href="{{ url_for('auth.login', provider_name='facebook') }}"
+                       class="btn btn-social btn-facebook">
+                        <i class="fa fa-facebook"></i>
+                       Login With Facebook
+                    </a>
+                </div>
+                <div class="divider"></div>
+                <div>
+                    <a href="{{ url_for('auth.login', provider_name='google') }}"
+                       class="btn btn-social btn-google">
+                        <i class="fa fa-google"></i>
+                        Login With Google
+                    </a>
                 </div>
             </div>
         </div>
+        <div class="divider"></div>
+        <br/><br/>
     </div>
 </div>
-
+<hr/>
 {% endblock %}
 {% block document_ready %}
 {{super()}}
 $("document").ready(function() {
-    $("#fullSizeBox").closest("div.col-lg-12").css("padding", "0");
+    $("#mainNav").removeClass("hidden");
     var qs = (function(a) {
     if (a == "") return {};
     var b = {};
