add show macro filter to language section in profile

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1358,7 +1358,7 @@
                 <h4 id="timeZoneLocaleLoc" class="profile-item-title index-item">Locale / Time Zone</h4>
                 <div class="flex">
                     <div class="timezone-container">
-                        {{profileLocale(person)}}
+                        {{profileLocale(person)|show_macro('language')}}
                     </div>
                     <div class="timezone-container">
                         {{profileTimeZone(person)}}
