--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -858,7 +858,7 @@
         <div class="col-md-12">
             <div class="profile-item-container">
                 <h4 id="clinicalQuestionsLoc" class="profile-item-title index-item">{{ _("Clinical Question") }}</h4>
-                <p class="text-muted">{{ _("Question inquired of the patient at account creation") }}</p>
+                <p class="text-muted">{{ _("Question asked of the patient at account creation") }}</p>
                 <input type="hidden" id="iq_userId" value="{{person.id if person}}" />
                 <div id="pcaLocalizedContainer" class="well" style="margin-top: 1em; padding: 0.7em 2em 1em 2em">
                      <div id="patMeta" data-topic="pca_localized" class="pat-q">
@@ -905,7 +905,7 @@
         <div class="col-md-12">
             <div class="profile-item-container">
                 <h4 id="clinicalQuestionsLoc" class="profile-item-title index-item">{{ _("Clinical Questions") }}</h4>
-                <h4 class="text-muted">{{ _("Questions inquired of the patient at registration") }}</h4>
+                <h4 class="text-muted">{{ _("Questions asked of the patient at registration") }}</h4>
                 <input type="hidden" id="iq_userId" value="{{person.id if person}}" />
                 <div id="patientQContainer" class="well" style="margin-top: 1em; padding: 0.8em 2em 2em 2em">
                     {{patientQGroup(current_user)}}
@@ -932,6 +932,7 @@
         $(function () {
             $("#patientQ").show();
             $("#patTx").remove();
+            $("#patMeta").remove();
 
             $("#patientQ hr").hide();
             {% if person and current_user and person.id != current_user.id %}
