Add comorb to correct instrument sequence

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1210,7 +1210,7 @@
                 <div class="profile-item-container custom-container-item">
                     <h4 id="customEnterManuallyLoc" class="profile-item-title index-item">{{_("Enter manually")}}</h4>
                     <div class="custom-container-content text-muted">{{_("Enter questionnaire responses on patient's behalf. Helpful if responses have been completed on paper.")}}</div><br/>
-                    <a class="btn btn-tnth-primary" id="assessmentLink" href="/api/present-assessment?instrument_id=eortc&instrument_id=hpfs&instrument_id=prems&instrument_id=irondemog&instrument_id=comorb&subject_id={{person.id}}&initial=true">{{_("Enter manually")}}</a>
+                    <a class="btn btn-tnth-primary" id="assessmentLink" href="/api/present-assessment?instrument_id=eortc&instrument_id=hpfs&instrument_id=prems&instrument_id=irondemog&subject_id={{person.id}}&initial=true">{{_("Enter manually")}}</a>
 
                 </div>
             </div>
