--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -5,10 +5,11 @@
 <style>
 /*inline styling specific to profile page due to new two panel layout*/
 @media (max-width: 1737px) {body.open-nav .footer-container { border-top: 0 !important;}.container { overflow: hidden;}.logo-container { margin-right: 9em; }}
-@media (max-width: 1493px) {body.open-nav .copyright-container {margin-left: 12em; }}
+@media (max-width: 1690px) {body.open-nav  #homeFooter {margin-left: 10%;}}
+@media (max-width: 1495px) {body.open-nav .footer-container { margin-left: 20%; }}
 @media (max-width: 1361px) {body.open-nav .footer-container {text-align: right; padding-left: 1em; padding-right: 5em;}}
-@media (max-width: 1351px) {body.open-nav .footer-container .pull-right { margin-right: -50%; }}
 @media (max-width: 1293px) {.copyright-container {padding-left: 2em;}}
+@media (max-width: 1199px) {body.open-nav .footer-container { margin-left: 40%; }}
 @media (max-width: 1082px) {.copyright-container {margin-left: 2em;}.footer-container {border-top: 0 !important;}}
 @media (max-width: 991px) { #homeFooter {padding-left: 3em !important;}}
 </style>
