css fixes of custom patient profile section in eproms

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -30,6 +30,31 @@ body {
   color: #333;
   font-size: 16px;
 }
+.btn {
+  font-size: 1em;
+  letter-spacing: 1px;
+}
+.btn-set {
+  margin-bottom: 1.5em;
+}
+.btn-set .btn {
+  margin-bottom: 0.5em;
+}
+.btn-tnth-primary {
+  color: #fff;
+  background-color: #79815D;
+  border-color: #79815D;
+  transition: all 0.3s ease-in-out 0s;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+}
+.btn-tnth-primary:hover,
+.btn-tnth-primary:focus,
+.btn-tnth-primary.active,
+.open > .dropdown-toggle.btn-tnth-primary {
+  color: #fff;
+  background-color: #2a4531;
+  border-color: #1c2f21;
+}
 a {
   color: #57675B;
 }
@@ -595,30 +620,6 @@ div.right-panel {
 .tnth-splash #wellContent {
   width: 100%;
 }
-.btn {
-  font-size: 1em;
-}
-.btn-set {
-  margin-bottom: 1.5em;
-}
-.btn-set .btn {
-  margin-bottom: 0.5em;
-}
-.btn-tnth-primary {
-  color: #fff;
-  background-color: #79815D;
-  border-color: #79815D;
-  transition: all 0.3s ease-in-out 0s;
-  -webkit-transition: all 0.3s ease-in-out 0s;
-}
-.btn-tnth-primary:hover,
-.btn-tnth-primary:focus,
-.btn-tnth-primary.active,
-.open > .dropdown-toggle.btn-tnth-primary {
-  color: #fff;
-  background-color: #2a4531;
-  border-color: #1c2f21;
-}
 .btn-tnth-back {
   color: #777;
   padding: 0 5px 0 0;
@@ -900,9 +901,8 @@ div.noOrg-container span {
 }
 #btnProfileSendEmail {
   margin-top: 5%;
-  font-size: 0.9em;
   padding: 0.5em;
-  border-radius: 6px;
+  border-radius: 4px;
   color: #FFF;
 }
 #profileEmailMessage {
@@ -1180,16 +1180,36 @@ table.profile-audit-log TH,
   border-bottom: 1px solid #E0E6E3;
   padding: 0.1em 0 1.5em 0;
 }
-.custom-container-item,
-.custom-container-item-right {
+.custom-container h4 {
+  margin-bottom: 1em;
+}
+.custom-container button,
+.custom-container a {
+  padding: 0.5em;
+}
+.custom-container #btnProfileSendEmail {
+  width: 100%;
+}
+.custom-container .custom-container-item,
+.custom-container .custom-container-item-right {
   width: 33%;
   max-width: 100%;
+  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.custom-container-item-right {
+.custom-container .custom-container-item-right {
   margin-right: 0.12em;
 }
-.custom-container-content {
+.custom-container .custom-container-content {
   font-size: 0.95em;
+}
+.custom-container .custom-btn {
+  margin-bottom: 0.9em;
+}
+.custom-container .enter-manual-container {
+  flex-grow: 1.5;
 }
 .flex {
   display: flex;
@@ -1736,14 +1756,19 @@ div.org-container input[type="checkbox"] {
   .custom-container {
     display: block;
   }
-  .custom-container-item,
-  .custom-container-item-right {
+  .custom-container .custom-container-item,
+  .custom-container .custom-container-item-right {
     font-size: 0.9em;
     width: 100%;
     max-width: 100%;
   }
   .custom-container #profileEmailSelect {
     width: 90%;
+    max-width: 100%;
+  }
+  .custom-container #btnProfileSendEmail,
+  .custom-container .custom-btn {
+    width: 280px;
     max-width: 100%;
   }
   #profileStudyIDContainer {
