--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1831,7 +1831,7 @@ div.org-container {
   }
 }
 @media (min-width: 797px) {
-  #indexNavBar, #indexContainer {
+ #indexNavBar span.index-list, #indexContainer {
     display: none;
   }
   div.left-panel, a.back, a.open {
