export button styling fixes  #Please enter the commit message for your changes. Lines starting

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -510,7 +510,10 @@ div.right-panel {
 }
 #patientAssessmentDownload {
   padding: 0.65em;
-  height: 2.6em;
+  height: 2.86em;
+  font-size: 1em;
+  vertical-align: middle;
+  border-radius: 4px;
 }
 
 #dataDownloadModal {
