--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -443,7 +443,10 @@ div.right-panel {
 }
 #patientAssessmentDownload {
   padding: 0.65em;
-  height: 2.6em;
+  height: 2.86em;
+  font-size: 1em;
+  vertical-align: middle;
+  border-radius: 4px;
 }
 #dataDownloadModal .modal-body {
   padding: 1em;
