--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -439,7 +439,10 @@ h4.detail-title {
 }
 #patientAssessmentDownload {
   padding: 0.65em;
-  height: 2.6em;
+  height: 2.86em;
+  font-size: 1em;
+  vertical-align: middle;
+  border-radius: 4px;
 }
 #dataDownloadModal .modal-body {
   padding: 1em;
