--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -497,7 +497,10 @@ h4.detail-title {
 
 #patientAssessmentDownload {
   padding: 0.65em;
-  height: 2.6em;
+  height: 2.86em;
+  font-size: 1em;
+  vertical-align: middle;
+  border-radius: 4px;
 }
 
 #dataDownloadModal {
